# floor-heat-mapper

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.vpn.yaml  docker-compose.yaml
rosbot/: .env  .env.template  Dockerfile  compose.rosbot.hardware.yaml  compose.rosbot.heatmapping.lan.yaml  compose.rosbot.heatmapping.vpn.yaml  compose.rosbot.heatmapping.yaml  compose.rosbot.lan.yaml  compose.rosbot.localization.yaml  compose.rosbot.mapping.yaml  compose.rosbot.vpn.yaml  compose.rosbot.yaml  compose.rviz.lan.yaml  compose.rviz.vpn.yaml  compose.rviz.yaml  dds-config.template.xml  docker-compose.vpn.yaml  docker-compose.yaml  map-load.sh  map-save.sh  sync-with-robot.sh  sync_with_rosbot.sh
rosbot/config/: amcl_params.yaml  nav2_params.yaml  rosbot.rviz  rosbot_pro_mapping.rviz
rosbot/maps/maps/: map.yaml
rosbot/robot_model/urdf/: rosbot.urdf
rosbot/src/floor_heat_mapper/: CMakeLists.txt  package.xml
rosbot/src/floor_heat_mapper/include/floor_heat_mapper/: floor_heat_mapper.hpp  heatmap_publisher.hpp
rosbot/src/floor_heat_mapper/launch/: floor_heat_mapper.launch.py
rosbot/src/floor_heat_mapper/scripts/: heat_mapping_planner.py  mapping_planner.py
rosbot/src/floor_heat_mapper/src/: floor_heat_mapper.cpp  heatmap_publisher.cpp  main.cpp
rpi_pico_firmware/: platformio.ini
rpi_pico_firmware/include/: main.hpp  micro_ros.hpp  thermal_camera.hpp
rpi_pico_firmware/src/: main.cpp  micro_ros.cpp  thermal_camera.cpp
src/floor_heat_mapper/: CMakeLists.txt
src/floor_heat_mapper/include/floor_heat_mapper/: heatmap_publisher.hpp  map_publisher.hpp
src/floor_heat_mapper/src/: heatmap_publisher.cpp  main.cpp  map_publisher.cpp
